# Oriol_Engine

./: .clang-format  CMakeLists.txt  LICENSE  Readme.md
Oriol/: CMakeLists.txt
Oriol/API/: API.hpp  CMakeLists.txt  Readme.md
Oriol/API/Aid/: Readme.md
Oriol/API/Aid/Coroutine/: Coroutine.hpp  HowToUse.md
Oriol/API/Aid/DateTime/: DateTime.cpp  DateTime.hpp  HowToUse.md
Oriol/API/Aid/Filesystem/: Filesystem.cpp  Filesystem.hpp  HowToUse.md
Oriol/API/Aid/Fusion/: Fusion.hpp  HowToUse.md
Oriol/API/Aid/INI/: HowToUse.md  INIParser.cpp  INIParser.hpp
Oriol/API/Aid/InfoSys/: HowToUse.md  InfoSys.cpp  InfoSys.hpp
Oriol/API/Aid/JSON/: HowToUse.md  JSONParser.cpp  JSONParser.hpp
Oriol/API/Aid/Multithread/: HowToUse.md  Multithread.cpp  Multithread.hpp
Oriol/API/Aid/Plugins/: HowToUse.md  Plugins.cpp  Plugins.hpp
Oriol/API/Aid/RTTI/: HowToUse.md  RTTI.hpp
Oriol/API/Aid/Random/: HowToUse.md  Random.cpp  Random.hpp
Oriol/API/Aid/Res/: HowToUse.md  Res.cpp  Res.hpp
Oriol/API/Aid/Singleton/: HowToUse.md  Singleton.hpp
Oriol/API/Aid/StringHelper/: HowToUse.md  StringHelper.cpp  StringHelper.hpp
Oriol/API/Aid/SystemConfiguration/: HowToUse.md  SystemConfiguration.cpp  SystemConfiguration.hpp
Oriol/API/Aid/Timer/: HowToUse.md  Timer.cpp  Timer.hpp
Oriol/API/Aid/TypeToType/: HowToUse.md  TypeToType.cpp  TypeToType.hpp
Oriol/API/Aid/UnitTests/: HowToUse.md  UnitTests.hpp
Oriol/API/Aid/XML/: XMLParser.cpp  XMLParser.hpp
Oriol/API/Gfx/: Readme.md
Oriol/API/Gfx/ShaderPack/: HowToUse.md  ShaderPack.cpp  ShaderPack.hpp
Oriol/API/Gfx/ShaderPack/HLSLToGLSL/: CiString.hpp  CodeWriter.cpp  CodeWriter.hpp  Compiler.cpp  Compiler.hpp  ConsoleManip.cpp  ConsoleManip.hpp  Dictionary.hpp  Exception.cpp  Exception.hpp  Export.hpp  Flags.hpp  HTG.cpp  HTG.hpp  Helper.hpp  IncludeHandler.cpp  IncludeHandler.hpp  IndentHandler.cpp  IndentHandler.hpp  JoinString.cpp  JoinString.hpp  Log.cpp  Log.hpp  PlatformConsoleManip.cpp  Reflection.cpp  Reflection.hpp  ReflectionPrinter.cpp  ReflectionPrinter.hpp  Report.hpp  ShaderVersion.cpp  ShaderVersion.hpp  SourceCode.cpp  SourceCode.hpp  SymbolTable.cpp  SymbolTable.hpp  Targets.cpp  Targets.hpp  Variant.cpp  Variant.hpp  Version.hpp
Oriol/API/Gfx/ShaderPack/HLSLToGLSL/AST/: AST.cpp  AST.hpp  ASTEnums.cpp  ASTEnums.hpp  ASTFactory.cpp  ASTFactory.hpp  Identifier.cpp  Identifier.hpp  SourceArea.cpp  SourceArea.hpp  SourcePosition.cpp  SourcePosition.hpp  Token.cpp  Token.hpp  TokenString.cpp  TokenString.hpp  TypeDenoter.cpp  TypeDenoter.hpp
Oriol/API/Gfx/ShaderPack/HLSLToGLSL/AST/Visitor/: ASTPrinter.cpp  ASTPrinter.hpp  ControlPathAnalyzer.cpp  ControlPathAnalyzer.hpp  EndOfScopeAnalyzer.cpp  EndOfScopeAnalyzer.hpp  ExprConverter.cpp  ExprConverter.hpp  ExprEvaluator.cpp  ExprEvaluator.hpp  FuncNameConverter.cpp  FuncNameConverter.hpp  Optimizer.cpp  Optimizer.hpp  ReferenceAnalyzer.cpp  ReferenceAnalyzer.hpp  ReflectionAnalyzer.cpp  ReflectionAnalyzer.hpp  StructParameterAnalyzer.cpp  StructParameterAnalyzer.hpp  TypeConverter.cpp  TypeConverter.hpp  UniformPacker.cpp  UniformPacker.hpp  Visitor.cpp  Visitor.hpp  VisitorTracker.cpp  VisitorTracker.hpp
Oriol/API/Gfx/ShaderPack/HLSLToGLSL/Backend/: Converter.cpp  Converter.hpp  Generator.cpp  Generator.hpp
Oriol/API/Gfx/ShaderPack/HLSLToGLSL/Backend/GLSL/: GLSLConverter.cpp  GLSLConverter.hpp  GLSLExtensionAgent.cpp  GLSLExtensionAgent.hpp  GLSLGenerator.cpp  GLSLGenerator.hpp  GLSLIntrinsics.cpp  GLSLIntrinsics.hpp
Oriol/API/Gfx/ShaderPack/HLSLToGLSL/Frontend/: Analyzer.cpp  Analyzer.hpp  IntrinsicAdept.cpp  IntrinsicAdept.hpp  Parser.cpp  Parser.hpp  PreProcessor.cpp  PreProcessor.hpp  PreProcessorScanner.cpp  PreProcessorScanner.hpp  SLParser.cpp  SLParser.hpp  SLScanner.cpp  SLScanner.hpp  Scanner.cpp  Scanner.hpp
Oriol/API/Gfx/ShaderPack/HLSLToGLSL/Frontend/GLSL/: GLSLExtensions.cpp  GLSLExtensions.hpp  GLSLKeywords.cpp  GLSLKeywords.hpp  GLSLParser.cpp  GLSLParser.hpp  GLSLPreProcessor.cpp  GLSLPreProcessor.hpp  GLSLScanner.cpp  GLSLScanner.hpp
Oriol/API/Gfx/ShaderPack/HLSLToGLSL/Frontend/HLSL/: HLSLAnalyzer.cpp  HLSLAnalyzer.hpp  HLSLIntrinsics.cpp  HLSLIntrinsics.hpp  HLSLKeywords.cpp  HLSLKeywords.hpp  HLSLParser.cpp  HLSLParser.hpp  HLSLScanner.cpp  HLSLScanner.hpp
Oriol/API/Gfx/ShaderPack/HLSLToGLSL/Report/: ReportHandler.cpp  ReportHandler.hpp  ReportIdents.hpp  ReportIdentsEN.hpp
Oriol/API/Gfx/Window/: Window.hpp
Oriol/Oriol_Dev/: CMakeLists.txt  Oriol_Dev.cpp
Oriol/Oriol_Dev/BuildSys/: BuildSys.cpp  BuildSys.hpp
Oriol/Oriol_Dev/BuildSys/FPLParser/: FPLParser.cpp  FPLParser.hpp
Oriol/Oriol_Dev/BuildSys/MakeFusion/: MakeFusion.cpp  MakeFusion.hpp
Oriol/Oriol_Dev/Options/: Options.cpp  Options.hpp
Oriol/Oriol_Dev/ProjectCreator/: ConsoleColor.cpp  ConsoleColor.hpp  ProjectCreator.cpp  ProjectCreator.hpp
Scripts/: build.py  build.sh  build_oriol_engine.bat
